--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,9 @@
 <h1>Sign Up</h1>
 
 <%= form_for(@user, url: '/signup') do |f| %>
+    <%= f.label :username %> 
+    <%= f.text_field :username, required: true %> 
+    <br>
     <%= f.label :email %> 
     <%= f.email_field :email, required: true %> 
     <br>
