--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -10,5 +10,7 @@
     <%= f.label :password %> 
     <%= f.password_field :password %> 
 
-    <%= f.submit "Submit" %>
+    <%= f.submit "Join" %>
 <% end %>
+
+<a href="/">Go Back</a>
