--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,5 @@
-<h1>Glad you're here <%= @user.username %> !</h1>
+<h1>Hey <%= @user.username %>!</h1>
 
-<%= form_tag("/logout", method: "delete") do %>
-    <%= submit_tag "Logout" %> 
-<% end %> 
 
-<%= link_to "Logout", logout_path, method: "delete" %>
+
+<%= link_to "Logout", logout_path %>
