--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
-<html>
+<!--[if lt IE 7]> <html class="no-js ie6 oldie" lang="en"> <![endif]-->
+<!--[if IE 7]>    <html class="no-js ie7 oldie" lang="en"> <![endif]-->
+<!--[if IE 8]>    <html class="no-js ie8 oldie" lang="en"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
   <head>
-    <title>RateMyOppressor</title>
-    <%= csrf_meta_tags %>
-    <%= csp_meta_tag %>
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1" />
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <title> Rate My Oppressor </title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="/stylesheets/main.css" />
   </head>
 
   <body>
-    <div>
-      <% if logged_in? %>
-      <%= link_to "Review An Officer", new_review_path %>
-      <%= link_to "Feed", officers_path %>
-      <%= link_to "Log Out", logout_path, method: "delete" %> 
-      <% else %> 
-      <%= link_to "Log In", login_path %> | 
-      <%= link_to "Sign Up", signup_path %> 
+
+    <div class="wrapper">
+
+      <% if flash[:error] %>
+      <h3 style="color:red;"><%= flash[:error] %></h3>
       <% end %>
+
+      <% if flash[:message] %>
+      <h3 style="color:green;"><%= flash[:message] %></h3>
+      <% end %>
+
+      <div class="nav">
+        <% if logged_in? %>
+          <%= link_to "Review An Officer", officers_path %>
+          <%= link_to "Feed", reviews_path %>
+          <%= link_to "Log Out", logout_path, method: "delete" %> 
+          <% else %> 
+          <%= link_to "Log In", login_path %> | 
+          <%= link_to "Sign Up", signup_path %> 
+        <% end %>
+      </div>
+
+        <%= yield %>
+
+      <footer class="branding">
+        <small>&copy; 2020 <strong> Rate My Oppressor </strong></small>
+      </footer>
     </div>
-    <%= yield %>
+
+    <script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
+    <!--[if lt IE 7]>
+      <script src="//ajax.googleapis.com/ajax/libs/chrome-frame/1.0.2/CFInstall.min.js"></script>
+      <script>window.attachEvent("onload",function(){CFInstall.check({mode:"overlay"})})</script>
+    <![endif]-->
   </body>
 </html>
+</html> 
+
