--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -3,6 +3,6 @@
 <% @reviews.each do |review| %> 
     <h3><a href="/reviews/<%= review.id %>"><%= review.title %></a><h3>
 <br>
-    <p><small><%= review.description %></small></p>
+    <p><small><%= review.content %></small></p>
     <p></small>Posted on: <%= review.created_at %></small></p>
 <% end %>
