--- a/app/views/reviews/show.html.erb
+++ b/app/views/reviews/show.html.erb
@@ -7,6 +7,7 @@
 
 <% if @review.user == current_user %>
 
-<%= link_to "Edit", edit_review_path(@review) %>
+<h4><%= link_to "Edit", edit_review_path(@review) %></h4>
+<h4><%= link_to "Delete", destroy_review_path(@review) %></h4>
 
 <% end %>
