--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -3,3 +3,4 @@
 
 <%= link_to "Sign Up", signup_path %> or
 <%= link_to "Log In", login_path %>
+<%= link_to "Sign In With Google", '/auth/google_oauth2'%>
