--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -4,4 +4,4 @@
 <h2>Badge Number: <%= @officer.badge_number %></h2>
 
 
-<%= link_to "Leave a Review", new_review_path(@officer)  %>
+<%= link_to "Leave a Review", new_officer_review_path(@officer)  %>
