--- a/app/views/officers/show.html.erb
+++ b/app/views/officers/show.html.erb
@@ -3,5 +3,14 @@
 <h2>Gender: <%= @officer.gender %></h2>
 <h2>Badge Number: <%= @officer.badge_number %></h2>
 
+<% if !@officer.reviews.empty? %>
+  <h4>Recent Reviews:</h4>
+  <% @officer.reviews.order(updated_at: :desc).limit(3).each do |r|%>
+    <li>
+      <strong><%= r.user.username%></strong> says "<%= link_to r.content, officer_review_path(@officer,r)%>" at <%= r.updated_at.strftime("%I:%M %p on %m/%d/%Y") %>
+    </li>
+  <% end %>
+<% end %>
 
-<%= link_to "Leave a Review", new_officer_review_path(@officer)  %>
+
+<p><%= link_to "Leave a Review", new_officer_review_path(@officer)  %></p>
