--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,8 +1,7 @@
 <h1>What Others Are Saying</h1>
 
-<% @reviews.each do |review| %> 
-    <h3><a href="/reviews/<%= review.id %>"><%= review.title %></a><h3>
-    <p><small><%= review.content %></small></p>
-    <br>
-    <p></small>Posted on: <%= review.created_at %></small></p>
+<ul>
+<% @reviews.each do |r|%>
+  <%= r.user.username%> says "<%= r.content%>" about: <strong><%= link_to r.officer.name, officer_path(r.officer_id) %></strong>
 <% end %>
+</ul>
